--- a/card.css
+++ b/card.css
@@ -1,96 +1,92 @@
-
-.skills_cards{
-    display: flex;
-    flex-direction: row;
-    margin: 2rem;
-    justify-content: space-around;
-   position: relative;
-   width: 80vw;
-   flex-wrap: wrap;
+.skills_cards {
+  display: flex;
+  flex-direction: row;
+  margin: 2rem;
+  justify-content: space-around;
+  position: relative;
+  width: 80vw;
+  flex-wrap: wrap;
 }
-.icon{
-    fill: var(--btn-color);
-    height: 5rem;
+.icon {
+  fill: var(--btn-color);
+  height: 5rem;
 }
-svg{
-    fill: rgb(177, 176, 176);
-    height: 4rem;
+svg {
+  fill: var(--main-gray);
+  height: 4rem;
 }
-.skills_card{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color:var(--main-color) ;
-    padding: 2rem;
-    height: 6rem;
-    width: 6rem;
-    margin-right:1.25rem ;
-    margin-top: 2.5rem;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 3s linear;
-    /* transition:  3s linear; */
-    position:relative;
+.skills_card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-color);
+  padding: 2rem;
+  height: 6rem;
+  width: 6rem;
+  margin-right: 1.25rem;
+  margin-top: 2.5rem;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 3s linear;
+  /* transition:  3s linear; */
+  position: relative;
 }
-.skills_effect{
-    position: absolute;
-    top:0;
-    left:0;
-    display: flex;
-    flex-direction: row;
-    height: 6rem;
-    margin: 1rem;
-    overflow: hidden;
+.skills_effect {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  height: 6rem;
+  margin: 1rem;
+  overflow: hidden;
 }
-.skills_effect2{
-    position: absolute;
-    top:80%;
-    right:0;
-    display: flex;
-    flex-direction: row;
-    margin: 1rem;
-    overflow: hidden;
-    height: 6rem;
+.skills_effect2 {
+  position: absolute;
+  top: 80%;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  margin: 1rem;
+  overflow: hidden;
+  height: 6rem;
 }
-.box{
-    height: 5rem;
-    background-color: var(--btn-color);
-    width: .25rem;
-    margin: .5rem ;
-    animation: 3s boxAnimation linear infinite forwards;
-    border-radius: 5px;
-    
+.box {
+  height: 5rem;
+  background-color: var(--btn-color);
+  width: 0.25rem;
+  margin: 0.5rem;
+  animation: 3s boxAnimation linear infinite forwards;
+  border-radius: 5px;
 }
 @keyframes boxAnimation {
-    
-    100%{
-        transform: translateY(150%);
-    }
+  100% {
+    transform: translateY(150%);
+  }
 }
-.skills_card:hover{
-    transform: scale(1.15);
-    border: solid 1px var(--btn-color);
-    fill: var(--btn-color);
+.skills_card:hover {
+  transform: scale(1.15);
+  border: solid 1px var(--btn-color);
+  fill: var(--btn-color);
 }
-.skills_card:last-child{
-    transform: rotate(-4deg) translate(10%,-10%);
-    /* transform: ; */
+.skills_card:last-child {
+  transform: rotate(-4deg) translate(10%, -10%);
+  /* transform: ; */
 }
 
-
- .skills_card:hover .icon svg{
-    fill: var(--btn-color);
-    background-color: transparent;
+.skills_card:hover .icon svg {
+  fill: var(--btn-color);
+  background-color: transparent;
 }
-.skills_card_effect{
-    position: absolute;
-    height: 100%;
-    width: 4px;
-    background-color: var(--btn-color);
-    left: 0;
-    border-radius: inherit;
-    /* opacity: 0; */
+.skills_card_effect {
+  position: absolute;
+  height: 100%;
+  width: 4px;
+  background-color: var(--btn-color);
+  left: 0;
+  border-radius: inherit;
+  /* opacity: 0; */
 }
 /* .slider{
     width: 1.25rem;
@@ -102,14 +98,40 @@ svg{
     top: 65%;
 } */
 
-.hand{
-    height: 5rem;
-    position: absolute;
-    top: -4rem;
-    right: -4rem;
-    transform: rotate(30deg);
-
+.hand {
+  height: 5rem;
+  position: absolute;
+  top: -4rem;
+  right: -4rem;
+  transform: rotate(30deg);
 }
-.hand img{
-    height: 100%;
+.hand img {
+  height: 100%;
 }
+@media (max-width: 48rem) {
+  .skills_card {
+    padding: 2rem;
+    height: 3rem;
+    width: 3rem;
+    margin-right: .75rem;
+    margin-top: 1.25rem;
+  }
+}
+@media (min-width:22.5rem ) and (max-width:27.5rem) {
+    .skills_card {
+      padding: .3rem;
+      height: 3.8rem;
+      width: 3.8rem;
+      margin-right: .35rem;
+      margin-top: 1.25rem;
+    }
+    h1{
+        font-size: 2.5rem;
+    }
+    .title{
+       font-size: .85rem;
+      }
+    svg{
+        height: 1.25rem;
+    }
+  }
