--- a/projects.css
+++ b/projects.css
@@ -9,17 +9,25 @@
    flex-wrap: wrap;
 }
 
+.value{
+    font-size: 7rem;
+    font-weight: 700;
+    margin: 1rem;
+    color: var(--main-color);
+}
+
 .project_item{
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
-    background-color:var(--main-color) ;
+    /*justify-content: center;
+    *//*align-items: center;
+    */background-color:var(--main-color) ;
     padding: 2rem;
-    height: 15rem;
-    width: 10rem;
-    margin-right:.75rem ;
-    margin-top: 1rem;
+    height: 25rem;
+    width: 20rem;
+    /* margin-left:5vw ;
+    margin-top: 12.5vh; */
+    margin: 2.5vw;
     border-radius: 1rem;
     transition: all 3s linear;
     /*transition:  3s linear;
@@ -28,8 +36,12 @@
     -moz-border-radius: 1rem;
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
-    box-shadow: var(--main-color) 3px 5px 6px;
-    overflow: hidden;
+    /*box-shadow: var(--main-color) 3px 5px 6px;
+    */overflow: hidden;
+    -webkit-transition: all 3s linear;
+    -moz-transition: all 3s linear;
+    -ms-transition: all 3s linear;
+    -o-transition: all 3s linear;
 }
 .project_item img{
     height: 60%;
@@ -84,13 +96,16 @@
 }
 .project_item .title{
     position: absolute;
-    top: .5%;
-    
+    top: 1.5%;
+    font-size: 1.25rem;
     left: 1rem;
 }
 .project_item .info{
     color: var(--btn-color);
-    font-size: .75rem;left: 1rem;
+    position: absolute;
+    font-size: .9rem;
+    left: 2rem;
+    top:10%;
 }
 .project_item .effect{
    height: 2rem;
@@ -124,7 +139,8 @@
     -ms-border-radius: .25rem;
     -o-border-radius: .25rem;
     margin: .5rem;
-    font-size: .75rem;
+    font-size: 1.1rem;
+    font-weight: 600;
     color: var(--main-color);
 }
 .icon_globe{
@@ -132,8 +148,8 @@
     position: absolute;
     top: 50%;
     left: 35%;
-    height: 1.75rem;
-    width: 1.75rem;
+    height: 2.75rem;
+    width: 2.75rem;
     background-image: url(/icons/globe-solid.svg);
     filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
     -webkit-filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
@@ -161,8 +177,8 @@
    position: absolute;
    top: 50%;
    left: 50%;
-   height: 1.75rem;
-   width: 1.75rem;
+   height: 2.75rem;
+   width: 2.75rem;
    background-image: url(/icons/github-brands.svg);
    filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
    -webkit-filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
