--- a/projects.css
+++ b/projects.css
@@ -1,223 +1,239 @@
-.projects_container{
-    display: flex;
-    flex-direction: row;
-    margin: 2.5rem;
-    justify-content: space-evenly;
-   position: relative;
-   width: 100vw;
-   /* height: 60vh; */
-   flex-wrap: wrap;
+.projects_container {
+  display: flex;
+  flex-direction: row;
+  margin: 2.5rem;
+  justify-content: space-evenly;
+  position: relative;
+  width: 100vw;
+  /* height: 60vh; */
+  flex-wrap: wrap;
 }
 
-.value{
-    font-size: 7rem;
-    font-weight: 700;
-    margin: 1rem;
-    color: var(--main-color);
+.value {
+  font-size: 7rem;
+  font-weight: 700;
+  margin: 1rem;
+  color: var(--main-color);
 }
 
-.project_item{
-    display: flex;
-    flex-direction: column;
-    /*justify-content: center;
-    *//*align-items: center;
-    */background-color:var(--main-color) ;
-    padding: 2rem;
-    height: 22.5rem;
-    width: 17rem;
-    /* margin-left:5vw ;
-    margin-top: 12.5vh; */
-    margin: 2.5vw;
-    border-radius: 1rem;
-    transition: all 3s linear;
-    /*transition:  3s linear;
-    */position:relative;
-    -webkit-border-radius: 1rem;
-    -moz-border-radius: 1rem;
-    -ms-border-radius: 1rem;
-    -o-border-radius: 1rem;
-    /*box-shadow: var(--main-color) 3px 5px 6px;
-    */overflow: hidden;
-    -webkit-transition: all 3s linear;
-    -moz-transition: all 3s linear;
-    -ms-transition: all 3s linear;
-    -o-transition: all 3s linear;
-}
-.project_item img{
-    height: 60%;
-    width: 150%;
-    position: absolute;
-    top: 25%;
-    /*left: 1.35rem;
+.project_item {
+  display: flex;
+  flex-direction: column;
+  /*justify-content: center;
+    */ /*align-items: center;
     */
-    left: -25%;
-    /*border-radius: inherit;
+  background-color: var(--main-color);
+  padding: 2rem;
+  height: 22.5rem;
+  width: 17rem;
+  /* margin-left:5vw ;
+    margin-top: 12.5vh; */
+  margin: 2.5vw;
+  border-radius: 1rem;
+  transition: all 3s linear;
+  /*transition:  3s linear;
+    */
+  position: relative;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  /*box-shadow: var(--main-color) 3px 5px 6px;
+    */
+  overflow: hidden;
+  -webkit-transition: all 3s linear;
+  -moz-transition: all 3s linear;
+  -ms-transition: all 3s linear;
+  -o-transition: all 3s linear;
+}
+.project_item img {
+  height: 60%;
+  width: 150%;
+  position: absolute;
+  top: 25%;
+  /*left: 1.35rem;
+    */
+  left: -25%;
+  /*border-radius: inherit;
     -webkit-border-radius: inherit;
     -moz-border-radius: inherit;
     -ms-border-radius: inherit;
     -o-border-radius: inherit;
-    */filter: blur(1px) brightness(var(--brightness));
-    cursor: pointer;
-    transition:filter 0.75s  ;
-    -webkit-filter: blur(1px) brightness(70%);
+    */
+  filter: blur(1px) brightness(var(--brightness));
+  cursor: pointer;
+  transition: filter 0.75s;
+  -webkit-filter: blur(1px) brightness(70%);
 }
-@keyframes reduceBrightness{
-    0%{
-        filter: brightness(0.7);
-        -webkit-filter: brightness(0.7);
-}
-    50%{
-        filter: brightness(0.4);
-        -webkit-filter: brightness(0.4);
-}
-100%{
+@keyframes reduceBrightness {
+  0% {
+    filter: brightness(0.7);
+    -webkit-filter: brightness(0.7);
+  }
+  50% {
     filter: brightness(0.4);
     -webkit-filter: brightness(0.4);
+  }
+  100% {
+    filter: brightness(0.4);
+    -webkit-filter: brightness(0.4);
+  }
 }
+.project_item:hover img {
+  animation: 6s linear reduceBrightness;
+  -webkit-animation: 6s linear reduceBrightness;
 }
-.project_item:hover img{
-    animation:  6s linear reduceBrightness;
-    -webkit-animation:  6s linear reduceBrightness;
+.project_item:hover .icon_globe {
+  display: flex;
+  transform: translateX(0%);
+  -webkit-transform: translateX(0%);
+  -moz-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  -o-transform: translateX(0%);
 }
-.project_item:hover .icon_globe{
-    display: flex;
-    transform: translateX(0%);
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
+.project_item:hover .icon_git {
+  display: flex;
+  transform: translateX(0%);
+  -webkit-transform: translateX(0%);
+  -moz-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  -o-transform: translateX(0%);
 }
-.project_item:hover .icon_git{
-    display: flex;
-    transform: translateX(0%);
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
+.project_item .title {
+  position: absolute;
+  top: 1.5%;
+  /* font-size: 1.25rem; */
+  left: 1rem;
 }
-.project_item .title{
-    position: absolute;
-    top: 1.5%;
-    /* font-size: 1.25rem; */
-    left: 1rem;
+.project_item .info {
+  color: var(--btn-color);
+  position: absolute;
+  /* font-size: 0.9rem; */
+  left: 3rem;
+  top: 10%;
 }
-.project_item .info{
-    color: var(--btn-color);
-    position: absolute;
-    font-size: .9rem;
-    left: 3rem;
-    top:10%;
-}
-.project_item .effect{
-   height: 3.5rem;
-   width: 2px;
-   position: absolute;
-   top: 10%;
-   left: 6.5%;
-   background-color: var(--main-text-color);
-   z-index: 1;
-   border-radius: 2px;
-   -webkit-border-radius: 2px;
-   -moz-border-radius: 2px;
-   -ms-border-radius: 2px;
-   -o-border-radius: 2px;
+.project_item .effect {
+  height: 3.5rem;
+  width: 2px;
+  position: absolute;
+  top: 10%;
+  left: 6.5%;
+  background-color: var(--main-text-color);
+  z-index: 1;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
 }
 
-
-
-.stack{
-    position: absolute;
-    bottom:.5rem;
-    left: .5rem;
-    width: 80%;
-    height: 10%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    margin:0 1rem;
-    align-items: center;
+.stack {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  width: 80%;
+  height: 10%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  margin: 0 1rem;
+  align-items: center;
 }
-.stack_item{
-    background-color: var(--btn-color);
-    padding: .5rem;
-    border-radius: .25rem;
-    /* width: 3rem; */
-    justify-content: center;
-    align-items: center;
-    -webkit-border-radius: .25rem;
-    -moz-border-radius: .25rem;
-    -ms-border-radius: .25rem;
-    -o-border-radius: .25rem;
-    margin: .5rem;
-    font-size: .7rem;
-    font-weight: 400;
-    color: var(--main-color);
+.stack_item {
+  background-color: var(--btn-color);
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  /* width: 3rem; */
+  justify-content: center;
+  align-items: center;
+  -webkit-border-radius: 0.25rem;
+  -moz-border-radius: 0.25rem;
+  -ms-border-radius: 0.25rem;
+  -o-border-radius: 0.25rem;
+  margin: 0.5rem;
+  font-size: 0.7rem;
+  font-weight: 400;
+  color: var(--main-color);
 }
-.icon_globe{
-    z-index: 10;
-    position: absolute;
-    top: 50%;
-    left: 33%;
-    height: 2.75rem;
-    width: 2.75rem;
-    background-image: url(/icons/globe-solid.svg);
-    filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
-    -webkit-filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
-    cursor: pointer;
-    transform: translateX(-1000%);
-    -webkit-transform: translateX(-1000%);
-    -moz-transform: translateX(-1000%);
-    -ms-transform: translateX(-1000%);
-    -o-transform: translateX(-1000%);
-    transition:.75s transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    -webkit-transition:.75s transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    -moz-transition:.75s transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    -ms-transition:.75s transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    -o-transition:.75s transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+.icon_globe {
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 33%;
+  height: 2.75rem;
+  width: 2.75rem;
+  background-image: url(/icons/globe-solid.svg);
+  filter: brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%)
+    hue-rotate(270deg) brightness(106%) contrast(109%);
+  -webkit-filter: brightness(0) saturate(100%) invert(19%) sepia(84%)
+    saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
+  cursor: pointer;
+  transform: translateX(-1000%);
+  -webkit-transform: translateX(-1000%);
+  -moz-transform: translateX(-1000%);
+  -ms-transform: translateX(-1000%);
+  -o-transform: translateX(-1000%);
+  transition: 0.75s transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -webkit-transition: 0.75s transform 0.75s
+    cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -moz-transition: 0.75s transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -ms-transition: 0.75s transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -o-transition: 0.75s transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
-.hide{
-    transform: translateX(0%);
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    -o-transform: translateX(0%);
+.hide {
+  transform: translateX(0%);
+  -webkit-transform: translateX(0%);
+  -moz-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  -o-transform: translateX(0%);
 }
-.icon_git{
-   z-index: 10;
-   position: absolute;
-   top: 50%;
-   left: 66%;
-   height: 2.75rem;
-   width: 2.75rem;
-   background-image: url(/icons/github-brands.svg);
-   filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
-   -webkit-filter:brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
-   cursor: pointer;
-   transform: translateX(-1000%);
-   -webkit-transform: translateX(-1000%);
-   -moz-transform: translateX(-1000%);
-   -ms-transform: translateX(-1000%);
-   -o-transform: translateX(-1000%);
-   transition: transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-   -webkit-transition: transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-   -moz-transition: transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-   -ms-transition: transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-   -o-transition: transform .75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+.icon_git {
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 66%;
+  height: 2.75rem;
+  width: 2.75rem;
+  background-image: url(/icons/github-brands.svg);
+  filter: brightness(0) saturate(100%) invert(19%) sepia(84%) saturate(5283%)
+    hue-rotate(270deg) brightness(106%) contrast(109%);
+  -webkit-filter: brightness(0) saturate(100%) invert(19%) sepia(84%)
+    saturate(5283%) hue-rotate(270deg) brightness(106%) contrast(109%);
+  cursor: pointer;
+  transform: translateX(-1000%);
+  -webkit-transform: translateX(-1000%);
+  -moz-transform: translateX(-1000%);
+  -ms-transform: translateX(-1000%);
+  -o-transform: translateX(-1000%);
+  transition: transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -webkit-transition: transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -moz-transition: transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -ms-transition: transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  -o-transition: transform 0.75s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
-@media (min-width:22.5rem ) and (max-width:27.5rem){
-    .project_item{
-        height: 15rem;
-        width: 10rem;
-    }
-    .stack_item{
-        font-size: .7rem;
-    }
-    .info{
-        font-size: .7rem;
-    }
+@media (min-width: 22.5rem) and (max-width: 27.5rem) {
+  .project_item {
+    height: 15rem;
+    width: 10rem;
+  }
+  .project_item .info {
+    font-size: 0.7rem;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    white-space: normal;
+    height: 1.5rem;
+  }
+  .stack_item {
+    font-size: 0.7rem;
+  }
+  .info {
+    font-size: 0.7rem;
+  }
 }
-@media (max-width:27.5rem){
-    .project_item img{
-        cursor: default;
-    }
+@media (max-width: 27.5rem) {
+  .project_item img {
+    cursor: default;
+  }
 }
