--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,7 @@ h1{
     height: 12rem;
     width: 12rem;
     position: relative;
-    background-image: url(/assets/Korede.2.jpg);
+    background-image: url(/assets/korede.png);
     background-size: 100%;
     background-repeat: no-repeat;
     border-radius: 50%;
